@@ -3,6 +3,7 @@ Revision history for CHI::Driver::SharedMem
 0.19
 	Panic if the shm segment is lost
 	Refactor the locking
+	Added workaround for test_discard_timeout
 
 0.18	Tue Aug 15 20:03:16 EDT 2023
 	Implement LRU when the shared memory segment is full
